--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
+    "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
+    "vue-multiselect": "^2.1.6",
+    "vue-picture-input": "^2.1.6",
     "vue-router": "^3.1.6",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
