--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
     "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
+    "vue-good-table": "^2.19.5",
     "vue-multiselect": "^2.1.6",
     "vue-picture-input": "^2.1.6",
     "vue-router": "^3.1.6",
     "vuejs-datepicker": "^1.6.2",
-    "vuex": "^3.1.3"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
